<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.botsko</groupId>
	<artifactId>prism</artifactId>
	<version>2.1.0</version>
	<name>prism</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<!-- <dependency>
			<groupId>us.dhmc</groupId>
			<artifactId>elixr</artifactId>
			<version>1.2.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency> -->
		<!--Spigot API-->
		<!-- <dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.12.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency> -->
		<!--Bukkit API-->
		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.12.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sk89q</groupId>
			<artifactId>worldedit</artifactId>
			<version>6.0.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jdbc</artifactId>
			<version>7.0.52</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.4</version>
		</dependency>
	</dependencies>
	<repositories>
		<!-- <repository>
			<id>dhmc-repo</id>
			<url>http://dhmc.us:8081/nexus/content/repositories/snapshots</url>
		</repository> -->
		<repository>
			<id>sk89q-repo</id>
			<url>http://maven.sk89q.com/repo/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>
	<build>
	<resources>
		<resource>
			<directory>src/main/resources</directory>
			<filtering>true</filtering>
			<includes>
				<include>**/*.yml</include>
			</includes>
		</resource>
		<resource>
			<directory>src/main/resources</directory>
			<filtering>false</filtering>
			<excludes>
				<exclude>**/*.yml</exclude>
			</excludes>
		</resource>
	</resources>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.0.2</version>
			<configuration>
			  <source>1.8</source>
			  <target>1.8</target>
			  <showDeprecation>false</showDeprecation>
			  <showWarnings>true</showWarnings>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-shade-plugin</artifactId>
			<version>2.3</version>
			<configuration>
				<relocations>
					<!-- <relocation>
						<pattern>me.botsko.elixr</pattern>
						<shadedPattern>com.helion3.prism.libs.elixr</shadedPattern>
					</relocation> -->
					<relocation>
						<pattern>org.apache.tomcat.jdbc</pattern>
						<shadedPattern>com.helion3.prism.libs.org.apache.tomcat.jdbc</shadedPattern>
					</relocation>
					<relocation>
						<pattern>org.apache.juli</pattern>
						<shadedPattern>com.helion3.prism.libs.org.apache.juli</shadedPattern>
					</relocation>
					<relocation>
						<pattern>com.google.gson</pattern>
						<shadedPattern>com.helion3.prism.libs.com.google.gson</shadedPattern>
					</relocation>
				</relocations>
			</configuration>
			<executions>
				<execution>
					<phase>package</phase>
					<goals>
						<goal>shade</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
	</plugins>
	</build>
	<!-- <distributionManagement>
		<repository>
			<id>deployment</id>
			<name>Internal Releases</name>
			<url>http://dhmc.us:8081/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>deployment</id>
			<name>Internal Releases</name>
			<url>http://dhmc.us:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement> -->
</project>
